fixed logo overlap and reduced connect size when reducing board size on boot

--- a/src/connect.scss
+++ b/src/connect.scss
@@ -213,6 +213,13 @@ $connect-header-logo-width: 152px;
 				height: 100%;
 				width: 100%;
 			}
+
+			@media only screen and (max-width: 465px) {
+				&.open {
+					border-bottom: 2px solid rgba(var(--global-color-menu-border-rgb), 0.5);
+					border-top: 2px solid transparent;
+				}
+			}
 		}
 	}
 
